Home: remove articles

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="row animated fadeIn">
     <div class="col-sm-12">
-        <div class="card h-100">
+        <div class="card">
             <div class="card-header">
                 <h4>360 Global</h4>
             </div>
@@ -10,5 +10,3 @@
         </div>
     </div>
 </div>
-
-<studio-articles></studio-articles>
