--- a/src/scss/_custom-variables.scss
+++ b/src/scss/_custom-variables.scss
@@ -82,7 +82,7 @@ $navbar-brand-logo:                 url('../../../../../src/assets/img/360global
 $navbar-brand-logo-size:            180px auto;
 $navbar-brand-border:               none;
 
-$navbar-color:                      $gray-light;
+$navbar-color:                      $gray-lighter;
 $navbar-hover-color:                darken($navbar-color, 10%);
 $navbar-active-color:               darken($navbar-color, 20%);
 $navbar-disabled-color:             lighten($navbar-color, 20%);
