Settings: new studio-billing-button

--- a/src/app/settings/account/account.component.html
+++ b/src/app/settings/account/account.component.html
@@ -9,7 +9,7 @@
                 <h5>Billing</h5>
             </div>
             <div class="col-sm-4 text-right">
-                <freescan-billing-button></freescan-billing-button>
+                <studio-billing-button></studio-billing-button>
             </div>
         </div>
     </div>
