--- a/src/scss/_custom-variables.scss
+++ b/src/scss/_custom-variables.scss
@@ -24,6 +24,7 @@ $brand-warning:             #fabb3d;
 $brand-danger:              #ff5454;
 
 $body-bg:                   #f6f6f6;
+$text-muted:                $gray;
 
 
 // Core Admin Variables
@@ -118,7 +119,7 @@ $sidebar-nav-link-hover-bg:         darken($sidebar-bg, 5%);
 $sidebar-nav-link-hover-icon-color: darken($brand-primary, 10%) !important;
 
 $sidebar-nav-link-hover-borders:    0;
-$sidebar-nav-link-active-color:     $brand-primary;
+$sidebar-nav-link-active-color:     darken($brand-primary, 20%);
 $sidebar-nav-link-active-bg:        darken($sidebar-bg, 5%);
 $sidebar-nav-link-active-icon-color: $brand-primary;
 
