App: use new fluid layout, use containers

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,13 @@
-<div class="row animated fadeIn">
-    <div class="col-sm-12">
-        <div class="card">
-            <div class="card-header">
-                <h4>360 Global</h4>
-            </div>
-            <div class="card-block">
-                Demonstration site to test white-labeling.
+<div class="container mt-2">
+    <div class="row animated fadeIn">
+        <div class="col-sm-12">
+            <div class="card">
+                <div class="card-header">
+                    <h4>360 Global</h4>
+                </div>
+                <div class="card-block">
+                    Demonstration site to test white-labeling.
+                </div>
             </div>
         </div>
     </div>
