--- a/src/app/links/links.component.html
+++ b/src/app/links/links.component.html
@@ -1,18 +1,20 @@
-<div class="card animated fadeIn">
-    <div class="card-block">
-        <div class="col-xs-12 mb-2">
-            <h4 class="card-title mb-0">Links</h4>
-            <div class="small text-muted">April 2017</div>
-        </div>
+<div class="container mt-2">
+    <div class="card animated fadeIn">
+        <div class="card-block">
+            <div class="col-xs-12 mb-2">
+                <h4 class="card-title mb-0">Links</h4>
+                <div class="small text-muted">April 2017</div>
+            </div>
 
-        <div class="col-xs-12">
-            <p>Here are some wonderful links.</p>
+            <div class="col-xs-12">
+                <p>Here are some wonderful links.</p>
 
-            <ul>
-                <li><a href="//www.google.com" target="_blank">Google.com</a></li>
-                <li><a href="//www.amazon.com" target="_blank">Amazon.com</a></li>
-                <li><a href="//www.internet.com" target="_blank">Internet.com</a></li>
-            </ul>
+                <ul>
+                    <li><a href="//www.google.com" target="_blank">Google.com</a></li>
+                    <li><a href="//www.amazon.com" target="_blank">Amazon.com</a></li>
+                    <li><a href="//www.internet.com" target="_blank">Internet.com</a></li>
+                </ul>
+            </div>
         </div>
     </div>
 </div>
