--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,9 +1,11 @@
-<div class="row">
-    <div class="col-sm-12">
-        <main>
-            <div class="col-sm-12">
-                <router-outlet></router-outlet>
-            </div>
-        </main>
+<div class="container mt-2">
+    <div class="row">
+        <div class="col-sm-12">
+            <main>
+                <div class="col-sm-12">
+                    <router-outlet></router-outlet>
+                </div>
+            </main>
+        </div>
     </div>
 </div>
