Billing: remove sales pitch language on 360 demo app

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,3 @@
 <studio-dashboard [navigation]="nav" [studioUrl]="studio" layout="fluid"></studio-dashboard>
-<studio-billing-modal
-    [intro]="'
-    Subscribers can access the full content of all publications,
-    along with all file attachments.
-    <br /><br />
-    When you become a subscriber, you will get instant access!
-'">
-</studio-billing-modal>
+
+<studio-billing-modal intro=""></studio-billing-modal>
