--- a/src/scss/_custom-variables.scss
+++ b/src/scss/_custom-variables.scss
@@ -77,7 +77,7 @@ $navbar-border: (
 );
 $navbar-brand-width:                250px;
 $navbar-brand-bg:                   #fff;
-// Path links from node_modules/@freescan/skeleton
+// Path links from node_modules/@rndstudio/skeleton
 // back into the consumer repository!
 $navbar-brand-logo:                 url('../../../../../src/assets/img/360global-logo.png');
 $navbar-brand-logo-size:            180px auto;
